<resources>
    <string name="app_name">MyApp</string>
    <string name="stop">stop</string>
    <string name="start">start</string>
    <string name="label">label</string>
    <string name="idk_napis_nieco">Idk, napis nieco</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="zadajte_daje">Zadajte údaje</string>
    <string name="zadajte_udaje" />
    <string name="Zadajte_udaje" />
    <string name="odosla">Odoslať</string>
    <string name="odoslať">odoslať</string>
    <string name="zadajte_meno">Zadajte meno</string>
    <string name="zadajte_zem_dlzku_podniku">zadajte zem. dlzku podniku</string>
    <string name="zadajte_zem_sirku_podniku">zadajte zem. sirku podniku</string>
    <string name="zadajte_nazov_podniku">zadajte nazov podniku</string>
    <string name="otvori_mapu">Otvoriť mapu</string>
    <string name="affirmation1">I am strong.</string>
    <string name="affirmation2">I believe in myself.</string>
    <string name="affirmation3">Each day is a new opportunity to grow and be a better version of myself.</string>
    <string name="affirmation4">Every challenge in my life is an opportunity to learn from.</string>
    <string name="affirmation5">I have so much to be grateful for.</string>
    <string name="affirmation6">Good things are always coming into my life.</string>
    <string name="affirmation7">New opportunities await me at every turn.</string>
    <string name="affirmation8">I have the courage to follow my heart.</string>
    <string name="affirmation9">Things will unfold at precisely the right time.</string>
    <string name="affirmation10">I will be present in all the moments that this day brings.</string>
    <string name="affirmation11">I will be present in all the moments that this day brings.</string>
    <string name="affirmation12">I will be present in all the moments that this day brings.</string>
    <string name="affirmation13">I will be present in all the moments that this day brings.</string>
    <string name="affirmation14">I will be present in all the moments that this day brings.</string>
    <string name="affirmation15">I will be present in all the moments that this day brings.</string>
    <string name="affirmation16">I will be present in all the moments that this day brings.</string>
    <string name="pub_name">Pub Name</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="opening_hours">Opening hours</string>
    <string name="outdoor_seating">Outdoor seating</string>
    <string name="website">Website</string>
    <string name="delete_this_pub">Delete this pub</string>
</resources>