<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:inputType="text"
            android:hint="@string/zadajte_meno"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/name"
            app:layout_constraintTop_toBottomOf="@+id/name"
            android:inputType="text"
            android:hint="@string/zadajte_nazov_podniku"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/latitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/company_name"
            app:layout_constraintTop_toBottomOf="@+id/company_name"
            android:inputType="numberDecimal"
            android:hint="@string/zadajte_zem_sirku_podniku"
            android:gravity="center"
            />
        <EditText
            android:id="@+id/longitude"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@+id/latitude"
            app:layout_constraintTop_toBottomOf="@+id/latitude"
            android:inputType="numberDecimal"
            android:hint="@string/zadajte_zem_dlzku_podniku"
            android:gravity="center"
            />
        <Button
            android:id="@+id/send_button"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/odoslať"
            app:layout_constraintStart_toStartOf="@+id/longitude"
            app:layout_constraintTop_toBottomOf="@+id/longitude" />

</androidx.constraintlayout.widget.ConstraintLayout>